src/parse_statements.c
#include "parse_statements.h"
#include "parser.h"
#include "dynamic_array.h"
#include "utils.h"
#include <stdio.h>  // for debug prints
#include "lexer.h"
#include "ast.h"
#include <ctype.h>
#include <limits.h>
#include <errno.h>
#include <stdlib.h>
#include <string.h>

/*
 * Refactored parse_statements.c
 * - helper utilities to reduce repetition
 * - clearer error handling and span updates
 * - small performance & readability improvements
 * - keeps unimplemented features as explicit parse errors
 */

/* Helper: create AST node or set OOM parse error */
static AstNode *new_node_or_err(Parser *p, AstNodeType kind, ParseError *err, const char *oom_msg) {
    AstNode *n = ast_create_node(kind, p->arena);
    if (!n) {
        if (err) create_parse_error(err, p, oom_msg, NULL);
    }
    return n;
}


#include <limits.h>
#include <stdint.h>
#include <stdbool.h>

static inline bool parse_int_lit(const char *s, size_t len, long long *out) {
    uint64_t val = 0;

    for (size_t i = 0; i < len; i++) {
        unsigned d = (unsigned)(s[i] - '0');
        if (d > 9) return false; // invalid char

        // Check overflow before multiplying
        if (val > (ULLONG_MAX - d) / 10)
            return false; // overflow

        val = val * 10 + d;
    }

    if (val > LLONG_MAX)
        return false; // doesn’t fit in signed 64-bit

    *out = (long long)val;
    return true;
}


#include <math.h>
#include <stdbool.h>

static inline bool parse_float_lit(const char *s, size_t len, double *out) {
    double val = 0.0;
    size_t i = 0;

    // integer part
    for (; i < len && s[i] >= '0' && s[i] <= '9'; i++) {
        val = val * 10.0 + (s[i] - '0');
    }

    // fractional part
    if (i < len && s[i] == '.') {
        i++;
        double frac = 0.0, base = 0.1;
        while (i < len && s[i] >= '0' && s[i] <= '9') {
            frac += (s[i] - '0') * base;
            base *= 0.1;
            i++;
        }
        val += frac;
    }

    // exponent part
    if (i < len && (s[i] == 'e' || s[i] == 'E')) {
        i++;
        int exp_sign = 1;
        if (i < len && (s[i] == '+' || s[i] == '-')) {
            if (s[i] == '-') exp_sign = -1;
            i++;
        }

        int exp_val = 0;
        while (i < len && s[i] >= '0' && s[i] <= '9') {
            exp_val = exp_val * 10 + (s[i] - '0');
            i++;
        }

        val *= pow(10.0, exp_sign * exp_val);
    }

    if (i != len) return false; // invalid chars remain

    *out = val;
    return true;
}





/* Helper: allocate + init a DynArray in arena, on error sets parse error and returns NULL */
static DynArray *alloc_dynarray(Parser *p, ParseError *err, size_t elem_size, int initial_capacity, const char *oom_msg) {
    DynArray *arr = arena_alloc(p->arena, sizeof(DynArray));
    if (!arr) {
        if (err) create_parse_error(err, p, oom_msg, NULL);
        return NULL;
    }
    dynarray_init_in_arena(arr, p->arena, elem_size, initial_capacity);
    return arr;
}

/* <Program> ::= { <Declaration> } */
AstNode *parse_program(Parser *p, ParseError *err) {
    if (!p) return NULL;

    AstNode *program = new_node_or_err(p, AST_PROGRAM, err, "out of memory creating program node");
    if (!program) return NULL;

    program->data.program.decls = alloc_dynarray(p, err, sizeof(AstNode*), 8, "out of memory creating program decls");
    if (!program->data.program.decls) return NULL;

    /* Parse a sequence of declarations. Keep track of overall span. */
    Span first_span = {0}, last_span = {0};
    bool have_any = false;

    for (;;) {
        /* If there's an error already recorded, stop parsing.
           parse_declaration sets err on failure. */
        if (err && err->message) return NULL;

        AstNode *decl = parse_declaration(p, err);
        if (!decl) break; /* no (more) declarations or parse error produced */

        if (dynarray_push_value(program->data.program.decls, &decl) != 0) {
            if (err) create_parse_error(err, p, "out of memory adding declaration to program", NULL);
            return NULL;
        }

        if (!have_any) {
            first_span = decl->span;
            have_any = true;
        }
        last_span = decl->span;
    }

    /* If parse_declaration produced an error earlier, we've already returned. Now check for trailing tokens. */
    if (p->current < p->end) {
        if (err && !err->message) { /* Only create error if there isn't one already */
            Token *t = current_token(p);
            create_parse_error(err, p, "trailing tokens after program end", t);
        }
        return NULL;
    }

    if (have_any) program->span = span_join(&first_span, &last_span);
    else if (p->tokens && p->tokens->count > 0) {
        Token *first = (Token*)dynarray_get(p->tokens, 0);
        program->span = first->span;
    } else {
        program->span = (Span){0,0,0,0};
    }

    return program;
}

AstNode *parse_declaration(Parser *p, ParseError *err) {
    if (!p) return NULL;

    Token *current = current_token(p);
    if (!current) {
        if (err) create_parse_error(err, p, "Unexpected end of input", NULL);
        return NULL;
    }

    if (current->type == TOK_EOF) {
        /* consume EOF to leave parser in a consistent state */
        consume(p, TOK_EOF);
        return NULL;
    }

    switch (current->type) {
        case TOK_FN: return parse_function_declaration(p, err);
        case TOK_CONST:
        case TOK_IDENTIFIER: return parse_declaration_stmt(p, err);
        default:
            if (err) create_parse_error(err, p, "expected function or variable declaration", current);
            return NULL;
    }
}

/* operand_parser: parse one operand/sublevel and return AST node (or NULL on error). */
typedef AstNode *(*operand_parser_fn)(Parser *p, ParseError *err);

typedef OpKind (*map_token_to_op_fn)(Token *tok);

AstNode *parse_declaration_stmt(Parser *p, ParseError *err) {
    if (!p) return NULL;

    AstNode *declaration = parse_variable_declaration(p, err);
    if (!declaration) return NULL;

    Token *semi = consume(p, TOK_SEMICOLON);
    if (!semi) {
        if (err) {err->use_prev_token = true; create_parse_error(err, p, "expected ';' after variable declaration", current_token(p));}
        return NULL;
    }

    declaration->span = span_join(&declaration->span, &semi->span);
    return declaration;
}

AstNode *parse_variable_declaration(Parser *p, ParseError *err) {
    if (!p) return NULL;

    AstNode *declaration = new_node_or_err(p, AST_VARIABLE_DECLARATION, err, "out of memory creating variable declaration node");
    if (!declaration) return NULL;

    Token *tok = current_token(p);
    if (!tok) {
        if (err) create_parse_error(err, p, "unexpected end of input in variable declaration", NULL);
        return NULL;
    }

    /* optional 'const' */
    if (tok->type == TOK_CONST) {
        Token *const_tok = consume(p, TOK_CONST);
        declaration->data.variable_declaration.is_const = 1;
        declaration->span = const_tok->span;
    } else {
        declaration->span = (Span){0,0,0,0};
    }

    Token *name_tok = consume(p, TOK_IDENTIFIER);
    if (!name_tok) {
        if (err) create_parse_error(err, p, "expected identifier in variable declaration", current_token(p));
        return NULL;
    }
    declaration->data.variable_declaration.name_rec = name_tok->record;

    /* ensure span covers the identifier (and 'const' if present) */
    if (declaration->span.start_line == 0) declaration->span = name_tok->span;
    else declaration->span = span_join(&declaration->span, &name_tok->span);

    if (!consume(p, TOK_COLON)) {
        if (err) create_parse_error(err, p, "expected ':' after variable name", current_token(p));
        return NULL;
    }

    AstNode *type = parse_type(p, err);
    if (!type) return NULL; /* parse_type produced an error */
    declaration->data.variable_declaration.type = type;

    /* optional initializer */
    AstNode *initializer = NULL;
    if (parser_match(p, TOK_ASSIGN)) {
        Token *assign_tok = consume(p, TOK_ASSIGN);

        Token *token = current_token(p);
        if (token && token->type == TOK_LBRACE) {
            initializer = parse_initializer_list(p, err);
        } else {
            initializer = parse_expression(p, err);
        }
        if (!initializer) return NULL;
        declaration->span = span_join(&declaration->span, &initializer->span);
    } else {
        declaration->span = span_join(&declaration->span, &type->span);
    }

    declaration->data.variable_declaration.initializer = initializer;
    return declaration;
}

// <FunctionDeclaration> ::= FN IDENTIFIER LPAREN [ <ParamList> ] RPAREN [ ARROW <Type> ] <Block>
AstNode *parse_function_declaration(Parser *p, ParseError *err) {
    AstNode *func_decl = ast_create_node(AST_FUNCTION_DECLARATION, p->arena);
    if (!func_decl) {
        if (err) create_parse_error(err, p, "out of memory creating function declaration node", NULL);  
        return NULL;
    }
    func_decl->data.function_declaration.params = arena_alloc(p->arena, sizeof(DynArray));
    if (!func_decl->data.function_declaration.params) {
        if (err) create_parse_error(err, p, "out of memory creating function params", NULL);
        return NULL;
    }
    dynarray_init_in_arena(func_decl->data.function_declaration.params, p->arena, sizeof(AstNode*), 4);

    /* fn */
    Token *fn_tok = consume(p, TOK_FN);
    if (!fn_tok) { create_parse_error(err, p, "expected 'fn' keyword at start of function declaration", current_token(p)); return NULL; }
    
    /* Initialize span with the fn token */
    func_decl->span = fn_tok->span;

    /* name */
    Token *name_tok = consume(p, TOK_IDENTIFIER);
    if (!name_tok) { create_parse_error(err, p, "expected function name", current_token(p)); return NULL; }
    func_decl->data.function_declaration.name_rec = name_tok->record;

    /* parameters */
    if (!consume(p, TOK_LPAREN)) { create_parse_error(err, p, "expected '(' after function name", current_token(p)); return NULL; }
    
    // parse parameters
    if (!parse_parameter_list(p, func_decl, err)) {
        return NULL; // parse_parameter_list already freed func_decl via fail_with
    }

    if (!consume(p, TOK_RPAREN)) { create_parse_error(err, p, "expected ')' after function parameters", current_token(p)); return NULL; }

    /* optional return type */
    Token *arrow_tok = current_token(p);
    if (arrow_tok && arrow_tok->type == TOK_ARROW) {
        consume(p, TOK_ARROW);
        AstNode *return_type = parse_type(p, err);
        if (!return_type) { return NULL; }
        func_decl->data.function_declaration.return_type = return_type;
    } else {
        func_decl->data.function_declaration.return_type = NULL; // no return type
    }

    /* body */
    func_decl->data.function_declaration.body = parse_block(p, err);
    if (!func_decl->data.function_declaration.body) return NULL; /* parse_block produced an error */
    
    /* Update span to include the entire function from fn token to end of body */
    func_decl->span = span_join(&func_decl->span, &func_decl->data.function_declaration.body->span);
    
    return func_decl;
}

/* <Type> ::= <TypeAtom> { <ArraySuffix> } { <PointerSuffix> } */
AstNode *parse_type(Parser *p, ParseError *err) {
    if (!p) return NULL;

    AstNode *base = parse_type_atom(p, err);
    if (!base) return NULL;

    Token *token = current_token(p);

    /* pointer prefixes: allow repeated leading '*' */
    while (token && token->type == TOK_STAR) {
        Token *star = consume(p, TOK_STAR);
        if (!star) { if (err) create_parse_error(err, p, "expected '*' for pointer suffix", current_token(p)); return NULL; }

        AstNode *ptr_type = new_node_or_err(p, AST_TYPE, err, "out of memory creating pointer type node");
        if (!ptr_type) return NULL;

        ptr_type->data.ast_type.kind = AST_TYPE_PTR;
        ptr_type->data.ast_type.u.ptr.target = base;
        ptr_type->data.ast_type.span = span_join(&base->span, &star->span);

        base = ptr_type;
        token = current_token(p);
    }

    /* arrays: [ <const-expr>? ] */
    while (token && token->type == TOK_LBRACKET) {
        Token *lbr = consume(p, TOK_LBRACKET);
        if (!lbr) { if (err) create_parse_error(err, p, "expected '[' for array suffix", current_token(p)); return NULL; }

        AstNode *size_expr = NULL;
        Token *peek = current_token(p);
        if (peek && peek->type != TOK_RBRACKET) {
            size_expr = parse_expression(p, err);
            if (!size_expr && err && err->message) return NULL;
        }

        Token *rbr = consume(p, TOK_RBRACKET);
        if (!rbr) { if (err) err->use_prev_token = true; create_parse_error(err, p, "expected ']' after array size expression", current_token(p)); return NULL; }

        AstNode *array_type = new_node_or_err(p, AST_TYPE, err, "out of memory creating array type node");
        if (!array_type) return NULL;

        array_type->data.ast_type.kind = AST_TYPE_ARRAY;
        array_type->data.ast_type.u.array.elem = base;
        array_type->data.ast_type.u.array.size_expr = size_expr;
        array_type->data.ast_type.span = span_join(&base->span, &rbr->span);

        base = array_type;
        token = current_token(p);
    }

    /* pointer suffixes (if any, allow mixing) */
    while (token && token->type == TOK_STAR) {
        Token *star = consume(p, TOK_STAR);
        if (!star) { if (err) create_parse_error(err, p, "expected '*' for pointer suffix", current_token(p)); return NULL; }

        AstNode *ptr_type = new_node_or_err(p, AST_TYPE, err, "out of memory creating pointer type node");
        if (!ptr_type) return NULL;

        ptr_type->data.ast_type.kind = AST_TYPE_PTR;
        ptr_type->data.ast_type.u.ptr.target = base;
        ptr_type->data.ast_type.span = span_join(&base->span, &star->span);

        base = ptr_type;
        token = current_token(p);
    }

    return base;
}

/* <TypeAtom> ::= <BaseType> | LPAREN <Type> RPAREN | <FunctionType> */
AstNode *parse_type_atom(Parser *p, ParseError *err) {
    if (!p) return NULL;

    Token *tok = current_token(p);
    if (!tok) { if (err) create_parse_error(err, p, "unexpected end of input in type", NULL); return NULL; }

    if (tok->type == TOK_LPAREN) {
        Token *lpar = consume(p, TOK_LPAREN);
        AstNode *inner = parse_type(p, err);
        if (!inner) return NULL;
        Token *rparen = consume(p, TOK_RPAREN);
        if (!rparen) { if (err) create_parse_error(err, p, "expected ')' after type", current_token(p)); return NULL; }
        inner->span = span_join(&lpar->span, &rparen->span);
        return inner;
    }

    if (tok->type == TOK_FN) {
        AstNode *func_type = parse_function_type(p, err);
        if (!func_type) return NULL;
        return func_type;
    }

    InternResult *base_type = get_base_type(p, err);
    if (!base_type) return NULL;

    AstNode *type_node = new_node_or_err(p, AST_TYPE, err, "out of memory creating type node");
    if (!type_node) return NULL;

    type_node->data.ast_type.kind = AST_TYPE_NAME;
    type_node->data.ast_type.span = tok->span;
    type_node->data.ast_type.u.base.rec = base_type;
    return type_node;
}

InternResult *get_base_type(Parser *p, ParseError *err) {
    if (!p) return NULL;
    Token *tok = current_token(p);
    if (!tok) { if (err) create_parse_error(err, p, "unexpected end of input while looking for base type", NULL); return NULL; }

    /* base types are contiguous in token enum between TOK_I32 and TOK_CHAR */
    if (tok->type < TOK_I32 || tok->type > TOK_CHAR) {
        if (err) create_parse_error(err, p, "expected base type", tok);
        return NULL;
    }

    consume(p, tok->type);
    return tok->record;
}

/* <FunctionType> ::= FN LPAREN [ <TypeList> ] RPAREN [ ARROW <Type> ] */
AstNode *parse_function_type(Parser *p, ParseError *err) {
    if (!p) return NULL;

    Token *fn_tok = consume(p, TOK_FN);
    if (!fn_tok) { if (err) create_parse_error(err, p, "expected 'fn' keyword", current_token(p)); return NULL; }

    AstNode *type_node = new_node_or_err(p, AST_TYPE, err, "out of memory creating function type node");
    if (!type_node) return NULL;

    type_node->data.ast_type.kind = AST_TYPE_FUNC;
    type_node->data.ast_type.span = fn_tok->span;

    Token *lparen = consume(p, TOK_LPAREN);
    if (!lparen) { if (err) create_parse_error(err, p, "expected '(' after 'fn type'", current_token(p)); return NULL; }

    Token *maybe = current_token(p);
    if (maybe && maybe->type == TOK_RPAREN) {
        Token *r = consume(p, TOK_RPAREN);
        type_node->data.ast_type.u.func.param_types = NULL;
        type_node->data.ast_type.span = span_join(&type_node->data.ast_type.span, &r->span);
    } else {
        DynArray *params = alloc_dynarray(p, err, sizeof(AstNode*), 4, "out of memory creating param types array");
        if (!params) return NULL;

        AstNode *param = parse_type(p, err);
        if (!param) return NULL;
        if (dynarray_push_value(params, &param) != 0) { if (err) create_parse_error(err, p, "out of memory adding param type", NULL); return NULL; }

        Token *sep = current_token(p);
        while (sep && sep->type == TOK_COMMA) {
            consume(p, TOK_COMMA);
            param = parse_type(p, err);
            if (!param) return NULL;
            if (dynarray_push_value(params, &param) != 0) { if (err) create_parse_error(err, p, "out of memory adding param type", NULL); return NULL; }
            sep = current_token(p);
        }

        Token *rparen = consume(p, TOK_RPAREN);
        if (!rparen) { if (err) create_parse_error(err, p, "expected ')' after function parameter types", current_token(p)); return NULL; }

        type_node->data.ast_type.u.func.param_types = params;
        type_node->data.ast_type.span = span_join(&type_node->data.ast_type.span, &rparen->span);
    }

    /* optional return type */
    Token *arrow = current_token(p);
    if (arrow && arrow->type == TOK_ARROW) {
        consume(p, TOK_ARROW);
        AstNode *ret = parse_type(p, err);
        if (!ret) return NULL;
        type_node->data.ast_type.u.func.return_type = ret;
        type_node->data.ast_type.span = span_join(&type_node->data.ast_type.span, &ret->span);
    } else {
        /* already ensured closing paren covered span above */
        type_node->data.ast_type.u.func.return_type = NULL;
    }

    return type_node;
}

/* Generic left-associative binary parser */
static AstNode *parse_left_assoc_binary(Parser *p, ParseError *err,
                        operand_parser_fn parse_operand,
                        map_token_to_op_fn map_op,
                        const char *oom_msg)
{
    AstNode *lhs = parse_operand(p, err);
    if (!lhs) return NULL;

    Token *token = current_token(p);
    int op;
    while (token && (op = map_op(token)) != OP_NULL) {
        /* copy operator token for span/error reporting */
        Token op_token = *token;
        consume(p, token->type);

        AstNode *rhs = parse_operand(p, err);
        if (!rhs) return NULL;

        AstNode *bin = new_node_or_err(p, AST_BINARY_EXPR, err, oom_msg);
        if (!bin) {
            if (err) create_parse_error(err, p, oom_msg, &op_token);
            return NULL;
        }

        bin->data.binary_expr.left  = lhs;
        bin->data.binary_expr.right = rhs;
        bin->data.binary_expr.op    = (OpKind)op;
        bin->span = span_join(&lhs->span, &rhs->span);

        lhs = bin;
        token = current_token(p);
    }

    return lhs;
}

AstNode *parse_expression(Parser *p, ParseError *err) {
    AstNode *lhs = parse_logical_or(p, err);
    if (!lhs) return NULL;

    Token *token = current_token(p);
    if (token && is_assignment_op(token->type)) {
        AstNode *assignment = parse_assignment(p, lhs, err);
        if (!assignment) return NULL;
        return assignment;
    }
    return lhs;
}



OpKind map_assignment_op(Token *tok) {
    if (!tok) return OP_NULL;
    switch (tok->type) {
        case TOK_ASSIGN: return OP_ASSIGN;
        case TOK_PLUS_EQ: return OP_PLUS_EQ;
        case TOK_MINUS_EQ: return OP_MINUS_EQ;
        case TOK_STAR_EQ: return OP_MUL_EQ;
        case TOK_SLASH_EQ: return OP_DIV_EQ;
        case TOK_PERCENT_EQ: return OP_MOD_EQ;
        default: return OP_NULL;
    }
}

AstNode* parse_assignment(Parser *p, AstNode *lhs, ParseError *err) {
    if (!p || !lhs) return NULL;

    if (!is_lvalue_node(lhs)) {
        if (err) create_parse_error(err, p, "left-hand side of assignment must be an lvalue", NULL);
        return NULL;
    }

    Token *op_tok = current_token(p);
    if (!op_tok || !is_assignment_op(op_tok->type)) {
        if (err) create_parse_error(err, p, "expected assignment operator", current_token(p));
        return NULL;
    }
    consume(p, op_tok->type);

    AstNode *rhs = parse_expression(p, err);
    if (!rhs) return NULL;

    AstNode *assign = new_node_or_err(p, AST_ASSIGNMENT_EXPR, err, "out of memory creating assignment node");
    if (!assign) return NULL;

    assign->data.assignment_expr.lvalue = lhs;
    assign->data.assignment_expr.rvalue = rhs;
    assign->data.assignment_expr.op = map_assignment_op(op_tok);
    assign->span = span_join(&lhs->span, &rhs->span);
    return assign;
}

OpKind map_logical_or_op(Token *tok) {
    if (!tok) return OP_NULL;
    if (tok->type == TOK_OR_OR) return OP_OR;
    return OP_NULL;
}

AstNode *parse_logical_or(Parser *p, ParseError *err) {
    return parse_left_assoc_binary(p, err, parse_logical_and, map_logical_or_op, "out of memory creating logical-or node");
}

OpKind map_logical_and_op(Token *tok) {
    if (!tok) return OP_NULL;
    if (tok->type == TOK_AND_AND) return OP_AND;
    return OP_NULL;
}
AstNode *parse_logical_and(Parser *p, ParseError *err) {
    return parse_left_assoc_binary(p, err, parse_equality, map_logical_and_op, "out of memory creating logical-and node");
}

OpKind map_equality_op(Token *tok) {
    if (!tok) return OP_NULL;
    switch (tok->type) {
        case TOK_EQ_EQ: return OP_EQ;
        case TOK_BANG_EQ: return OP_NEQ;
        default: return OP_NULL;
    }
}
AstNode *parse_equality(Parser *p, ParseError *err) {
    return parse_left_assoc_binary(p, err, parse_relational, map_equality_op, "out of memory creating equality node");
}

OpKind map_relational_op(Token *tok) {
    if (!tok) return OP_NULL;
    switch (tok->type) {
        case TOK_LT: return OP_LT;
        case TOK_GT: return OP_GT;
        case TOK_LT_EQ: return OP_LE;
        case TOK_GT_EQ: return OP_GE;
        default: return OP_NULL;
    }
}
AstNode *parse_relational(Parser *p, ParseError *err) {
    return parse_left_assoc_binary(p, err, parse_additive, map_relational_op, "out of memory creating relational node");
}

OpKind map_additive_op(Token *tok) {
    if (!tok) return OP_NULL;
    switch (tok->type) {
        case TOK_PLUS: return OP_ADD;
        case TOK_MINUS: return OP_SUB;
        default: return OP_NULL;
    }
}
AstNode *parse_additive(Parser *p, ParseError *err) {
    return parse_left_assoc_binary(p, err, parse_multiplicative, map_additive_op, "out of memory creating additive node");
}

OpKind map_multiplicative_op(Token *tok) {
    if (!tok) return OP_NULL;
    switch (tok->type) {
        case TOK_STAR: return OP_MUL;
        case TOK_SLASH: return OP_DIV;
        case TOK_PERCENT: return OP_MOD;
        default: return OP_NULL;
    }
}
AstNode *parse_multiplicative(Parser *p, ParseError *err) {
    return parse_left_assoc_binary(p, err, parse_unary, map_multiplicative_op, "out of memory creating multiplicative node");
}

OpKind map_unary_op(Token *tok) {
    if (!tok) return OP_NULL;
    switch (tok->type) {
        case TOK_PLUS: return OP_ADD;
        case TOK_MINUS: return OP_SUB;
        case TOK_BANG: return OP_NOT;
        case TOK_STAR: return OP_DEREF;
        case TOK_AMP: return OP_ADRESS;
        case TOK_PLUSPLUS: return OP_PRE_INC;
        case TOK_MINUSMINUS: return OP_PRE_DEC;
        default: return OP_NULL;
    }
}

AstNode *parse_unary(Parser *p, ParseError *err) {
    Token *token = current_token(p);
    if (token && (token->type == TOK_PLUS || token->type == TOK_MINUS || token->type == TOK_BANG || token->type == TOK_STAR || token->type == TOK_AMP || token->type == TOK_PLUSPLUS || token->type == TOK_MINUSMINUS)) {
        Token *op_token = consume(p, token->type);
        if (!op_token) { if (err) create_parse_error(err, p, "failed to consume prefix operator", token); return NULL; }
        AstNode *operand = parse_unary(p, err);
        if (!operand) return NULL;

        AstNode *unary = new_node_or_err(p, AST_UNARY_EXPR, err, "out of memory creating unary node");
        if (!unary) return NULL;

        unary->data.unary_expr.expr = operand;
        unary->data.unary_expr.op = map_unary_op(op_token);
        unary->span = span_join(&op_token->span, &operand->span);
        return unary;
    }
    return parse_postfix(p, err);
}

AstNode *parse_postfix(Parser *p, ParseError *err) {
    AstNode *primary = parse_primary(p, err);
    if (!primary) return NULL;

    Token *token = current_token(p);
    while (token && (token->type == TOK_PLUSPLUS || token->type == TOK_MINUSMINUS || token->type == TOK_LBRACKET || token->type == TOK_LPAREN)) {
        if (token->type == TOK_PLUSPLUS || token->type == TOK_MINUSMINUS) {
            Token *op_tok = token;
            AstNode *postfix = new_node_or_err(p, AST_UNARY_EXPR, err, "out of memory creating postfix node");
            if (!postfix) return NULL;

            postfix->data.unary_expr.expr = primary;
            postfix->data.unary_expr.op = (op_tok->type == TOK_PLUSPLUS) ? OP_POST_INC : OP_POST_DEC;
            postfix->span = span_join(&primary->span, &op_tok->span);

            consume(p, op_tok->type);
            primary = postfix;

        } else if (token->type == TOK_LBRACKET) {
            Token *lbr = consume(p, TOK_LBRACKET);
            AstNode *index = parse_expression(p, err);
            if (!index) return NULL;
            Token *rbr = consume(p, TOK_RBRACKET);
            if (!rbr) { if (err) create_parse_error(err, p, "expected ']' after array index expression", token); return NULL; }

            AstNode *array_access = new_node_or_err(p, AST_SUBSCRIPT_EXPR, err, "out of memory creating subscript node");
            if (!array_access) return NULL;

            array_access->data.subscript_expr.target = primary;
            array_access->data.subscript_expr.index = index;
            array_access->span = span_join(&primary->span, &rbr->span);
            primary = array_access;

        } else if (token->type == TOK_LPAREN) {
            Token *lparen = consume(p, TOK_LPAREN);

            AstNode *func_call = new_node_or_err(p, AST_CALL_EXPR, err, "out of memory creating function call node");
            if (!func_call) return NULL;

            func_call->data.call_expr.args = alloc_dynarray(p, err, sizeof(AstNode*), 4, "out of memory creating function call args array");
            if (!func_call->data.call_expr.args) return NULL;

            if (!parse_argument_list(p, func_call, err)) return NULL;

            Token *rparen = consume(p, TOK_RPAREN);
            if (!rparen) { if (err) create_parse_error(err, p, "expected ')' after function call arguments", token); return NULL; }

            func_call->data.call_expr.callee = primary;
            func_call->span = span_join(&primary->span, &rparen->span);
            primary = func_call;
        }

        token = current_token(p);
    }

    return primary;
}

LiteralType get_literal_type(TokenType type) {
    switch (type) {
        case TOK_INT_LIT: return INT_LITERAL;
        case TOK_FLOAT_LIT: return FLOAT_LITERAL;
        case TOK_TRUE: case TOK_FALSE: return BOOL_LITERAL;
        case TOK_STRING_LIT: return STRING_LITERAL;
        case TOK_CHAR_LIT: return CHAR_LITERAL;
        default: return LIT_UNKNOWN;
    }
}

int parse_argument_list(Parser *p, AstNode* call, ParseError *err) {
    Token *tok = current_token(p);
    if (!tok) { if (err) create_parse_error(err, p, "unexpected end of input in argument list", NULL); return 0; }
    if (tok->type == TOK_RPAREN) return 1; /* empty arglist */

    while (1) {
        tok = current_token(p);
        if (!tok) { if (err) create_parse_error(err, p, "unexpected end of input in argument list", NULL); return 0; }
